Fix overlapping issue in calculator, update outdoor average

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -154,7 +154,7 @@ text-transform:uppercase;
   text-align: center;
   /* margin: 10rem; */
   padding-top: 10rem;
-  height: 100%;
+  /* height: 100%; */
   /* background-color: gainsboro; */
   background: url("/images/ocean.jpg")no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -310,7 +310,11 @@ h3 {
   background-color: #e6e2dd;
 }
 
-
+.activity-indicator {
+  font-size: 1.5rem;
+    font-weight: 300;
+    font-family: inherit;
+}
 
 .hidden-content {
   height: 0px;
